# jpegxrcodec

./: .gitmodules  CMakeLists.txt  README.md
jxrcodec/: CMakeLists.txt  jxrcodec.cpp  jxrcodec.hpp  jxrcodec_priv.hpp
jxrcodec/codec/: algo.c  api.c  bytestream.c  bytestream.h  cr_parse.c  cr_parse_boxed.c  cw_emit.c  cw_emit_boxed.c  file.c  file.h  flags.c  init.c  io.c  jpegxr.c  jpegxr.h  jxr_priv.h  r_parse.c  w_emit.c  w_strip.c  w_tile_frequency.c  w_tile_spatial.h
test-images/: sample.raw  seagull.raw  test.jxr  tissue.raw
tests/: CMakeLists.txt  test_byte_stream.cpp  test_jxrcodec.cpp
